--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
 name = "scromble"
-version = "1.0.0"
+version = "2.0.0"
 authors = ["Joe Doyle <joethedoyle@protonmail.com>"]
 edition = "2018"
 
-# [build]
-# rustflags = ["-Ctarget-cpu=haswell","-Ctarget-feature=+sse2"]
+[build]
+rustflags = ["-Ctarget-cpu=haswell","-Ctarget-feature=+sse2"]
 
 [profile.release]
 lto = "fat"
@@ -14,12 +14,18 @@ lto = "fat"
 
 [dependencies]
 structopt = { version = "0.3" }
-rust-argon2 = { version = "0.8.2" }
-blake2b_simd = { version = "^0.5" }
-chacha20 = { version = "0.7.0", features = [ "xchacha","zeroize" ] }
+argon2 = { version = "0.4.1" }
+blake2 = { version = "0.10.6" }
+secrecy = { version = "0.8.0" }
+typenum = { version = "1.14" }
+chacha20 = { version = "0.9.0", features = [ "zeroize" ] }
 zeroize = { version = "1.1.1", features = [ "zeroize_derive" ] }
 rpassword = "5.0"
-rand = "0.7.3"
+rand = "0.8.5"
+conv = "0.3.3"
 generic-array = "0.14.4"
-cipher = { version = "0.3.0", features = [ "std" ] }
+cipher = { version = "0.4.2", features = [ "std" ] }
+rand_chacha = { version = "0.3.1" }
+subtle = { version = "2.4.1" }
+digest = { version = "0.10.6" }
 
