--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ typenum = { version = "1.14" }
 chacha20 = { version = "0.9.0", features = [ "zeroize" ] }
 zeroize = { version = "1.1.1", features = [ "zeroize_derive" ] }
 rpassword = "5.0"
+quickcheck = "1.0.3"
 rand = "0.8.5"
 conv = "0.3.3"
 generic-array = "0.14.4"
@@ -28,4 +29,7 @@ cipher = { version = "0.4.2", features = [ "std" ] }
 rand_chacha = { version = "0.3.1" }
 subtle = { version = "2.4.1" }
 digest = { version = "0.10.6" }
+
+[dev-dependencies]
+quickcheck_macros = "*"
 
