Add cargo metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "scromble"
+description = "A no-nonsense single-file encryptor with data authentication"
 version = "2.0.0"
 authors = ["Joe Doyle <joethedoyle@protonmail.com>"]
 edition = "2018"
+license = "AGPL-3.0-or-later"
+license-file = "LICENSE"
 
 [build]
 rustflags = ["-Ctarget-cpu=haswell","-Ctarget-feature=+sse2"]
