--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,16 @@ rustflags = ["-Ctarget-cpu=haswell","-Ctarget-feature=+sse2"]
 [profile.release]
 lto = "fat"
 
+[profile.dev]
+opt-level = 1
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 structopt = { version = "0.3" }
 argon2 = { version = "0.4.1" }
 blake2 = { version = "0.10.6" }
-secrecy = { version = "0.8.0" }
+secrecy = { version = "0.10.3" }
 typenum = { version = "1.14" }
 chacha20 = { version = "0.9.0", features = [ "zeroize" ] }
 zeroize = { version = "1.1.1", features = [ "zeroize_derive" ] }
