--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,11 @@
 [package]
 name = "scromble"
 description = "A no-nonsense single-file encryptor with data authentication"
-version = "2.0.1"
+version = "2.0.2"
 authors = ["Joe Doyle <joethedoyle@protonmail.com>"]
 edition = "2018"
 license = "AGPL-3.0-or-later"
 license-file = "LICENSE"
-
-[build]
-rustflags = ["-Ctarget-cpu=haswell","-Ctarget-feature=+sse2"]
 
 [profile.release]
 lto = "fat"
@@ -19,19 +16,18 @@ opt-level = 1
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = { version = "0.3" }
+clap = { version = "3.0.0", features = ["derive"] }
+clap_complete = { version = "3.0.0" }
 argon2 = { version = "0.4.1" }
 blake2 = { version = "0.10.6" }
 secrecy = { version = "0.10.3" }
 typenum = { version = "1.14" }
-chacha20 = { version = "0.9.0", features = [ "zeroize" ] }
 zeroize = { version = "1.1.1", features = [ "zeroize_derive" ] }
 rpassword = "5.0"
 quickcheck = "1.0.3"
 rand = "0.8.5"
 conv = "0.3.3"
 generic-array = "0.14.4"
-cipher = { version = "0.4.2", features = [ "std" ] }
 rand_chacha = { version = "0.3.1" }
 subtle = { version = "2.4.1" }
 digest = { version = "0.10.6" }
