--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,8 @@ opt-level = 1
 clap = { version = "3.0.0", features = ["derive"] }
 clap_complete = { version = "3.0.0" }
 argon2 = { version = "0.4.1" }
-blake2 = { version = "0.10.6" }
+# blake2 = { version = "0.10.6" }
+blake2b_simd = { version = "1.0.3" }
 secrecy = { version = "0.10.3" }
 typenum = { version = "1.14" }
 zeroize = { version = "1.1.1", features = [ "zeroize_derive" ] }
